--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "axios": "^0.15.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-modal": "^1.6.5"
+    "react-modal": "^1.6.5",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0",
+    "redux-promise": "^0.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
